change as to is

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <!-- k: <span id="demoK"></span>
     <input type="range" min="0" max="10" value="1.386" class="slider" id="sliderK" step="any"> -->
     <select name="state" id="state" onchange="call_both()">
-      <option value="">Select your state (default as Georgia)</option>
+      <option value="">Select your state (default is Georgia)</option>
   <option value="US">ALL</option>
   <option value="AL">Alabama</option>
   <option value="AK">Alaska</option>
