--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <td class="tdButtons"><button class="button" name="mapSelector" id="PR"    onclick="pushButton(this)">PR</button></td>  <!--  Qi -->
     <td class="tdButtons"><button class="button" name="mapSelector" id="PVID"    onclick="pushButton(this)">PVID</button></td>  <!--  Qi -->
     <td class="tdButtons"><button class="button" name="mapSelector" id="SC"    onclick="pushButton(this)">SC</button></td>  <!--  Qi -->
+    <td class="tdButtons"><button class="button" name="mapSelector" id="IR"    onclick="pushButton(this)">IR</button></td>  <!--  Qi -->
 
 
   </tr>
@@ -454,6 +455,7 @@
         {mapName:"PR",           fileName:"PR.csv"}, // Qi
         {mapName:"PVID",         fileName:"PVID.csv"}, // Qi
         {mapName:"SC",           fileName:"SC.csv"}, // Qi
+        {mapName:"IR",           fileName:"IR.csv"}, // Qi
         {mapName:"PM_U",         fileName:"genericPM.csv"}, // Qi
         {mapName:"PM_H",         fileName:"hurricanePM.csv"}, // Qi
         {mapName:"ResAbs_U",     fileName:"genericabs_Resilience.csv"},
